nginx-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: demo-app

spec:
  selector:
    app: nginx-demo

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
